fixed alignment of token selector in header

--- a/src/components/Synthetics/TVChart/TVChart.scss
+++ b/src/components/Synthetics/TVChart/TVChart.scss
@@ -59,7 +59,7 @@
 .Chart-top-scrollable-fade-overlay {
   position: absolute;
   width: 100%;
-  height: calc(100% - 20px);
+  height: calc(100% - 1.4rem);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
